# rust-web-scrape-robomower

./: Cargo.toml  README.md  api-dump.yaml  dockerfile
src/: main.rs  query_get_countries.rs  query_get_country.rs  query_get_first_class.rs  query_get_second_class.rs  query_get_third_class.rs  query_url.rs  query_webdata.rs  write_to_file.rs
src/q_g_c/: mod.rs
src/q_g_c/q_g_1st/: mod.rs
src/q_g_c/q_g_1st/q_g_2nd/: mod.rs
src/q_g_c/q_g_1st/q_g_2nd/q_g_3rd/: mod.rs
src/query_get_countries/: mod.rs
src/query_get_countries/query_get_first_class/: mod.rs
src/query_get_countries/query_get_first_class/query_get_second_class/: mod.rs
src/query_get_countries/query_get_first_class/query_get_second_class/query_get_third_class/: mod.rs
src/query_get_first_class/: mod.rs
src/query_get_first_class/query_get_second_class/: mod.rs
src/query_get_second_class/: mod.rs
src/query_get_second_class/query_get_third_class/: mod.rs
