[package]
name = "rust-web-scrape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.17"
reqwest = { version = "0.11.17" } #//, features = ["rustls-tls-native-roots"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
tokio = { version = "1.28.2", features = ["full"] }
